WIP reworking DB management using hibernate